Allow admin to change job schedule

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -83,6 +83,10 @@ $path: "/public/images/";
     margin-bottom: 10px;
 }
 
+.smallMarginRight {
+    margin-right: 10px;
+}
+
 .paddingBottom {
     padding-bottom: 30px;
 }
