LIC-882 Non-disclosable information.

--- a/server/views/review/includes/riskManagement.pug
+++ b/server/views/review/includes/riskManagement.pug
@@ -1,3 +1,4 @@
+
 include ./itemAndError
 -var risk = data.risk && data.risk.riskManagement || {}
 -var errors = errorObject.risk && errorObject.risk.riskManagement || {}
@@ -43,3 +44,13 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
     +itemAndError(risk.proposedAddressSuitable, errors.proposedAddressSuitable, "proposedAddressSuitable")
     if risk.proposedAddressSuitable === 'No'
       +itemAndError(risk.unsuitableReason, errors.unsuitableReason, "unsuitableReason")
+
+
+div.pure-g.borderBottomLight.midPaddingTopBottom
+  div.pure-u-1-2
+    div.pure-g
+      span.pure-u-3-4 Do you have information that cannot be disclosed to the offender?
+  div.pure-u-1-2
+    +itemAndError(risk.hasNonDisclosableInformation, errors.hasNonDisclosableInformation, "hasNonDisclosableInformation")
+    if risk.hasNonDisclosableInformation === 'Yes' && errors.nonDisclosableInformation
+      +itemAndError(risk.nonDisclosableInformation, errors.nonDisclosableInformation, "nonDisclosableInformation")
