--- a/assets/sass/additionalConditions.scss
+++ b/assets/sass/additionalConditions.scss
@@ -84,12 +84,21 @@
   }
 }
 
-.notice-container {
-    box-sizing: border-box;
-    background-color: #FFF0D5;
-    padding: 1em;
+%container-shared {
+  box-sizing: border-box;
+  padding: 1em;
+
+  .notice strong {
+    padding-left: 75px;
+  }
 }
 
-.notice-container .notice strong {
-    padding-left: 75px;
+.notice-container {
+  @extend %container-shared;
+  background-color: #FFF0D5;
+}
+
+.warning-container {
+  @extend %container-shared;
+  background-color: $mellow-red-25;
 }
