--- a/server/views/risk/mixins.pug
+++ b/server/views/risk/mixins.pug
@@ -1,11 +1,31 @@
 mixin readOnlyNonDisclosableInformation(risk)
-  if risk.hasNonDisclosableInformation === 'Yes'
+  if risk.nonDisclosableInformation === 'Yes'
     div.smallPaddingTop
       h3.heading-small.smallPaddingBottom Non-disclosable information
       div.warning-container
-        div#nonDisclosableInformationView.notice.largeMarginBottom #{risk.nonDisclosableInformation}
+        div#nonDisclosableInformationDetailsView.notice.largeMarginBottom #{risk.nonDisclosableInformationDetails}
         div.notice
           i.icon.icon-important
             span.visually-hidden Warning
 
           strong.bold-small.warning This information should not be shared with the offender under any circumstance, including where a subject access request is made.
+
+mixin nonDisclosableInformation(risk)
+  div.form-group.inline.smallPaddingTop
+    h3.heading-small Non-disclosable information
+    p Do you have information that cannot be disclosed to the offender?
+
+    div.multiple-choice(data-target="reasonFormNonDisclosableInformation")
+      input#nonDisclosableYes(type="radio" checked=data.nonDisclosableInformation === 'Yes' name="nonDisclosableInformation" value="Yes")
+      label(for="nonDisclosableYes") Yes
+
+    div.multiple-choice
+      input#nonDisclosableNo(type="radio" checked=data.nonDisclosableInformation === 'No' name="nonDisclosableInformation" value="No")
+      label(for="nonDisclosableNo") No
+
+    div#reasonFormNonDisclosableInformation.panel.js-hidden
+      textarea(name='nonDisclosableInformationDetails' id='nonDisclosableInformationDetails' class='form-control' rows='5', aria-label="Provide the non-disclosable information")
+        if risk.nonDisclosableInformationDetails
+          | #{risk.nonDisclosableInformationDetails}
+      p.paddingTop.bold This information should not be shared with the offender under any circumstance, including where a subject access request is made.
+
