--- a/server/views/risk/riskManagement.pug
+++ b/server/views/risk/riskManagement.pug
@@ -62,29 +62,13 @@ block content
 
 
           if user.role === 'RO'
-            div.form-group.inline.smallPaddingTop
-              h3.heading-small Non-disclosable information
-              p Do you have information that cannot be disclosed to the offender?
-
-              div.multiple-choice(data-target="reasonFormNonDisclosableInformation")
-                input#nonDisclosableYes(type="radio" checked=data.hasNonDisclosableInformation === 'Yes' name="hasNonDisclosableInformation" value="Yes")
-                label(for="nonDisclosableYes") Yes
-
-              div.multiple-choice
-                input#nonDisclosableNo(type="radio" checked=data.hasNonDisclosableInformation === 'No' name="hasNonDisclosableInformation" value="No")
-                label(for="nonDisclosableNo") No
-
-              div#reasonFormNonDisclosableInformation.panel.js-hidden
-                textarea(name='nonDisclosableInformation' id='nonDisclosableInformation' class='form-control' rows='5', aria-label="Provide the non-disclosable information")
-                  if data.nonDisclosableInformation
-                    | #{data.nonDisclosableInformation}
-                p.paddingTop.bold This information should not be shared with the offender under any circumstance, including where a subject access request is made.
+            +nonDisclosableInformation(data)
           else
-            input(type="hidden" name='hasNonDisclosableInformation' id='hasNonDisclosableInformation' value=data.hasNonDisclosableInformation)
-            input(type="hidden" name='nonDisclosableInformation'    id='nonDisclosableInformation'    value=data.nonDisclosableInformation)
+            input(type="hidden" name='nonDisclosableInformation' id='nonDisclosableInformation' value=data.nonDisclosableInformation)
+            input(type="hidden" name='nonDisclosableInformationDetails'    id='nonDisclosableInformationDetails'    value=data.nonDisclosableInformationDetails)
             +readOnlyNonDisclosableInformation(data)
 
-                include ../includes/roModificationWarning
+        include ../includes/roModificationWarning
 
         if (action === 'change')
           include ../includes/formSubmit
