Admin pages to run queries against delius api

--- a/server/views/admin/index.pug
+++ b/server/views/admin/index.pug
@@ -13,4 +13,6 @@ block content
         a(href='/admin/mailboxes') Notification mailboxes
       div
         a(href='/admin/jobs') Batch jobs
+      div
+        a(href='/admin/delius') Delius API search
 
