--- a/server/views/review/reporting.pug
+++ b/server/views/review/reporting.pug
@@ -17,6 +17,10 @@ block content
         span#reportingName.block.bold #{reporting.name}
 
       div.smallPaddingTop.paddingBottom
+        span.block Organisation
+        span#reportingOrganisation.block.bold #{reporting.organisation}
+
+      div.smallPaddingTop.paddingBottom
         span.block Address
         span#reportingAddress1.block.bold #{reporting.buildingAndStreet1}
         span#reportingAddress2.block.bold #{reporting.buildingAndStreet2}
