--- a/server/views/review/includes/licenceSummary.pug
+++ b/server/views/review/includes/licenceSummary.pug
@@ -134,3 +134,10 @@ div.largeMarginBottom
         p.alert.bold(id='reporting-error') #{errorObject.reporting.reportingInstructions}
       else
         include reportingInstructions
+
+  if user.role == 'RO'
+    div.taskListSingleLineItem.midPaddingBottom.borderBottom
+      div.pure-u-1.pure-u-md-3-4
+        h2.heading-medium Curfew address check form
+      div.pure-u-1.pure-u-md-1-4.center.buttonContainer
+        a#backBtn.requiredButton.button.smallMarginTop(href="/hdc/forms/curfewAddress/" + bookingId target="_blank" role="button") Create PDF
