--- a/server/views/review/risk.pug
+++ b/server/views/review/risk.pug
@@ -45,7 +45,7 @@ block content
 
         span#emsInformation.block.bold #{risk.emsInformation}
 
-    if risk.proposedAddressSuitable === 'Yes' && risk.emsInformation == 'Yes'
+    if risk.proposedAddressSuitable === 'Yes' && risk.emsInformation === 'Yes'
       div.smallPaddingTop
         span#emsInformationDetails.block.bold #{risk.emsInformationDetails}
 
