Use the correct form field name

--- a/server/views/admin/delius/index.pug
+++ b/server/views/admin/delius/index.pug
@@ -41,6 +41,6 @@ block content
             div.pure-u-sm-5-12
               input.form-control(id="bookingId" type="text" name="bookingId")
             div.pure-u-sm-5-12.sm-PadLeftRight15
-              input.form-control(id="offenderNo" type="text" name="bookingId")
+              input.form-control(id="offenderNo" type="text" name="offenderNo")
             div.pure-u-sm-1-6
               input.requiredButton.button(type="submit" value="Search")
