--- a/server/views/admin/delius/responsibleOfficer.pug
+++ b/server/views/admin/delius/responsibleOfficer.pug
@@ -5,7 +5,12 @@ block content
   div.back-link-container.smallPaddingTop
     a#back.link-back(href="/admin/delius") Back
 
-  div.pure-g.pure-u-1
-    div
-      | #{ro.deliusId}, #{ro.name}
+  div.pure-g.pure-u-1.paddingTop
+    form(method='POST' action='/admin/delius/managedOffenders')
+      input(type="hidden" name="_csrf" value=csrfToken)
+      input(type="hidden" name="staffCode" value=ro.deliusId)
+      div.pure-u-1-3
+        | #{ro.deliusId} - #{ro.name}
+      div.pure-u-2-3
+        input.link(type="submit" value="view managed offenders")
 
