--- a/server/views/forms/includes/probationCompleted.pug
+++ b/server/views/forms/includes/probationCompleted.pug
@@ -3,11 +3,11 @@ div.no-break.probationCompleted
   table.wide.noborder
     tr
       td Name
-      td.entry #{ro.name}
+      td.entry #{responsibleOfficer.name}
 
     tr
       td Email
-      td.entry
+      td.entry #{responsibleOfficer.email}
 
     tr
       td Date
