--- a/server/views/forms/includes/offender.pug
+++ b/server/views/forms/includes/offender.pug
@@ -25,7 +25,7 @@ div.no-break.smallPaddingBottom#offenderDetails
 
     tr
       td.nowrap Sentence date
-      td.entry
+      td.entry #{sentenceDetail.sentenceStartDate}
       td Sentence length
       td.entry
 
