LIC-1025 No validation warning when AP address not completed. Also improved error message for bad telephone number.

--- a/server/views/review/includes/licenceSummary.pug
+++ b/server/views/review/includes/licenceSummary.pug
@@ -47,7 +47,7 @@ div.largeMarginBottom
         +roCase
           +change("/hdc/curfew/approvedPremises/change/" + bookingId, 'addressEditLink')
 
-      +errorMessageOrBlock(errorObject.approvedPremisesAddress, 'approvedPremisesAddress-error')
+      +errorMessageOrBlock(errorObject.curfew && errorObject.curfew.approvedPremisesAddress, 'approvedPremisesAddress-error')
         include approvedPremisesAddress
   else
     div.borderBottom
