--- a/server/views/admin/delius/managedOffenders.pug
+++ b/server/views/admin/delius/managedOffenders.pug
@@ -5,6 +5,13 @@ block content
   div.back-link-container.smallPaddingTop
     a#back.link-back(href="/admin/delius") Back
 
+  div.pure-g.pure-u-1.paddingTop
+    form(method='POST' action='/admin/delius/responsibleOfficer')
+      input(type="hidden" name="_csrf" value=csrfToken)
+      input(type="hidden" name="offenderNo" value=offenders[0].offenderNo)
+      div.pure-u-1-3
+        input.link(type="submit" value="View responsible officer for these offenders")
+
   div.pure-g.pure-u-1
     table.largeMarginBottom
       thead
