--- a/server/views/admin/delius/responsibleOfficer.pug
+++ b/server/views/admin/delius/responsibleOfficer.pug
@@ -10,7 +10,12 @@ block content
       input(type="hidden" name="_csrf" value=csrfToken)
       input(type="hidden" name="staffCode" value=ro.deliusId)
       div.pure-u-1-3
-        | #{ro.deliusId} - #{ro.name}
-      div.pure-u-2-3
-        input.link(type="submit" value="view managed offenders")
+        input.link(type="submit" value="View managed offenders for " + ro.deliusId)
+
+      div.pure-u-1
+        table.largeMarginBottom
+          for entry in Object.entries(ro)
+            tr
+              td #{entry[0]}
+              td #{entry[1]}
 
