--- a/server/views/forms/includes/probationCompleted.pug
+++ b/server/views/forms/includes/probationCompleted.pug
@@ -7,7 +7,7 @@ div.no-break.probationCompleted
 
     tr
       td Email
-      td.entry #{responsibleOfficer.email}
+      td.entry
 
     tr
       td Date
