--- a/server/views/forms/address_unsuitable.pug
+++ b/server/views/forms/address_unsuitable.pug
@@ -1,46 +1,38 @@
-include includes/formsHeader
+extends forms-layout
 
-doctype html
-html(lang="en")
-  head
-    link(href= domain + "/public/stylesheets/pdf.css?" + version, media="print", rel="stylesheet", type="text/css")
+block content
 
-  body
+  +header('address unsuitable')
 
-    block content
+  p We have checked the address you gave us and decided it is not a suitable place for you to live while under home detention curfew (tagging).
 
-      div
+  p You need to provide details of another address where you could live if you still want to be considered for tagging.
 
-        +header('address unsuitable')
+  p If you cannot provide an address, Bail and Accommodation Support Services (BASS) could help you find somewhere to stay.
 
-        p We have checked the address you gave us and decided it is not a suitable place for you to live while under home detention curfew (tagging).
+  h2 I no longer want to be considered for tagging
 
-        p You need to provide details of another address where you could live if you still want to be considered for tagging.
+  h2 I still want to be considered but do not have another address
 
-        p If you cannot provide an address, Bail and Accommodation Support Services (BASS) could help you find somewhere to stay.
+  div.no-break
+    p What address would you prefer to live at?
+    ul.byHand
+      li Town:
+      li County:
+      li Signed:
+      li Date:
 
-        h2 I no longer want to be considered for tagging
+  h2 I can provide another address
 
-        h2 I still want to be considered but do not have another address 
-        
-        p What address would you prefer to live at?
-        ul.byHand
-          li Town:
-          li County:
-          li Signed:
-          li Date:
+  p What address would you prefer to live at?
+  include includes/addressEntry
 
-        div.pagebreak
-        h2 I can provide another address
+  div.no-break
+    p As far as I know the information I provided is correct. I am happy for the main person living at the address or the landlord to be contacted.
 
-        p What address would you prefer to live at?
-        include includes/addressEntry
-        
-        p As far as I know the information I provided is correct. I am happy for the main person living at the address or the landlord to be contacted.
-        
-        ul.byHand
-          li Signed:
-          li Date:
+    ul.byHand
+      li Signed:
+      li Date:
         
 
 
