--- a/server/views/review/conditions.pug
+++ b/server/views/review/conditions.pug
@@ -11,7 +11,7 @@ block content
       h2.heading-medium Additional conditions
       p The additional conditions that have been added by the RO are displayed below..
       div.borderBottomLight
-      +additionalConditions()
+      +additionalConditions('editable')
       div.pure-g.borderBottomLight.midPaddingTopBottom
         div.pure-u-1.pure-u-md-18-24.sm-padRight30.u-paddingBottom
           div.heading-small.noMargin.smallPaddingBottom Explain why you selected these conditions
