--- a/server/views/review/conditions.pug
+++ b/server/views/review/conditions.pug
@@ -15,7 +15,7 @@ block content
       div.pure-g.borderBottomLight.midPaddingTopBottom
         div.pure-u-1.pure-u-md-18-24.sm-padRight30.u-paddingBottom
           div.heading-small.noMargin.smallPaddingBottom Explain why you selected these conditions
-          div.conditionSummary.content #{data.additionalConditionsJustification}
+          div.conditionSummary.content(data-qa="additionalConditionsJustification") #{data.additionalConditionsJustification}
 
     else
       h2#message.heading-medium No additional conditions have been selected.
