--- a/server/views/review/includes/licenceSummary.pug
+++ b/server/views/review/includes/licenceSummary.pug
@@ -101,7 +101,7 @@ div.largeMarginBottom
           div.pure-g.borderBottomLight.midPaddingTopBottom
             div.pure-u-1.pure-u-md-18-24.sm-padRight30.u-paddingBottom
               div.heading-small.noMargin.smallPaddingBottom Explain why you selected these conditions
-              div.conditionSummary.content #{data.additionalConditionsJustification}
+              div.conditionSummary.content(data-qa="additionalConditionsJustification") #{data.additionalConditionsJustification}
 
         else if showErrors
           p(id='noConditionsError' class="bold alert") Select one or more additional conditions
