--- a/server/views/pdf/offenceDate.pug
+++ b/server/views/pdf/offenceDate.pug
@@ -12,7 +12,7 @@ block content
       ])
 
   div.pure-u-1.pure-u-md-1-2
-    h2.heading-large Did they commit their offence before 1 February 2015?
+    h2.heading-large Did they commit their offence before 1st February 2015?
 
   form(method="post")
     input(type="hidden" name="_csrf" value=csrfToken)
